<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.firstscreen.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo"
            android:alpha="0"
            tools:alpha="100"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:alpha="0"
            tools:alpha="100">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/btn_color"
                app:boxStrokeColor="@color/btn_color"
                app:cursorColor="@color/btn_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/account"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPalindrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:alpha="0"
            tools:alpha="100">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlPalindrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/btn_color"
                app:boxStrokeColor="@color/btn_color"
                app:cursorColor="@color/btn_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPalindrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/text_shadow"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/palindrom"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_color"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/check"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            tools:alpha="100"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_color"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/next"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            tools:alpha="100"/>

    </LinearLayout>

</RelativeLayout>